// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox> rendering with children should match snapshot 1`] = `
<div>
  <label
    className="labelWrapper"
  >
    <Inline
      alignItems="center"
      scale="s"
    >
      <div
        className="checkboxWrapper"
      >
        <test-file-stub />
      </div>
      <TextBody>
        Some label
      </TextBody>
      <input
        checked={false}
        className="inputWrapper"
        disabled={false}
        name="bar"
        onChange={[MockFunction]}
        type="checkbox"
        value="foo"
      />
    </Inline>
  </label>
</div>
`;

exports[`<Checkbox> rendering without children should match snapshot 1`] = `
<div>
  <label
    className="labelWrapper"
  >
    <Inline
      alignItems="center"
      scale="s"
    >
      <div
        className="checkboxWrapper"
      >
        <test-file-stub />
      </div>
      <input
        checked={false}
        className="inputWrapper"
        disabled={false}
        name="bar"
        onChange={[MockFunction]}
        type="checkbox"
        value="foo"
      />
    </Inline>
  </label>
</div>
`;

exports[`<Checkbox> rendering without children when checked is false with \`isIndeterminate\` should match snapshot 1`] = `
<div>
  <label
    className="labelWrapper"
  >
    <Inline
      alignItems="center"
      scale="s"
    >
      <div
        className="checkboxWrapper"
      >
        <test-file-stub />
      </div>
      <input
        checked={false}
        className="inputWrapper"
        disabled={false}
        name="bar"
        onChange={[MockFunction]}
        type="checkbox"
        value="foo"
      />
    </Inline>
  </label>
</div>
`;

exports[`<Checkbox> rendering without children when checked is false without \`isIndeterminate\` should match snapshot 1`] = `
<div>
  <label
    className="labelWrapper"
  >
    <Inline
      alignItems="center"
      scale="s"
    >
      <div
        className="checkboxWrapper"
      >
        <test-file-stub />
      </div>
      <input
        checked={false}
        className="inputWrapper"
        disabled={false}
        name="bar"
        onChange={[MockFunction]}
        type="checkbox"
        value="foo"
      />
    </Inline>
  </label>
</div>
`;

exports[`<Checkbox> rendering without children when checked is true with \`isIndeterminate\` should match snapshot 1`] = `
<div>
  <label
    className="labelWrapper"
  >
    <Inline
      alignItems="center"
      scale="s"
    >
      <div
        className="checkboxWrapper"
      >
        <test-file-stub />
      </div>
      <input
        checked={false}
        className="inputWrapper"
        disabled={false}
        name="bar"
        onChange={[MockFunction]}
        type="checkbox"
        value="foo"
      />
    </Inline>
  </label>
</div>
`;

exports[`<Checkbox> rendering without children when checked is true without \`isIndeterminate\` should match snapshot 1`] = `
<div>
  <label
    className="labelWrapper"
  >
    <Inline
      alignItems="center"
      scale="s"
    >
      <div
        className="checkboxWrapper"
      >
        <test-file-stub />
      </div>
      <input
        checked={true}
        className="inputWrapper"
        disabled={false}
        name="bar"
        onChange={[MockFunction]}
        type="checkbox"
        value="foo"
      />
    </Inline>
  </label>
</div>
`;

exports[`<Checkbox> rendering without children when disabled should match snapshot 1`] = `
<div>
  <label
    className="labelWrapper labelWrapperDisabled"
  >
    <Inline
      alignItems="center"
      scale="s"
    >
      <div
        className="checkboxWrapper isDisabled"
      >
        <test-file-stub />
      </div>
      <input
        checked={false}
        className="inputWrapper"
        disabled={true}
        name="bar"
        onChange={[MockFunction]}
        type="checkbox"
        value="foo"
      />
    </Inline>
  </label>
</div>
`;

exports[`<Checkbox> rendering without children when intermediate is true should match snapshot 1`] = `
<div>
  <label
    className="labelWrapper"
  >
    <Inline
      alignItems="center"
      scale="s"
    >
      <div
        className="checkboxWrapper"
      >
        <test-file-stub />
      </div>
      <input
        checked={false}
        className="inputWrapper"
        disabled={false}
        name="bar"
        onChange={[MockFunction]}
        type="checkbox"
        value="foo"
      />
    </Inline>
  </label>
</div>
`;

exports[`<Checkbox> rendering without children with \`data-*\` should match snapshot 1`] = `
<div
  data-test="foo-attribute-select-me-from-e2e"
>
  <label
    className="labelWrapper"
  >
    <Inline
      alignItems="center"
      scale="s"
    >
      <div
        className="checkboxWrapper"
      >
        <test-file-stub />
      </div>
      <input
        checked={false}
        className="inputWrapper"
        disabled={false}
        name="bar"
        onChange={[MockFunction]}
        type="checkbox"
        value="foo"
      />
    </Inline>
  </label>
</div>
`;

exports[`<Checkbox> rendering without children with error should match snapshot 1`] = `
<div>
  <label
    className="labelWrapper labelWrapperError"
  >
    <Inline
      alignItems="center"
      scale="s"
    >
      <div
        className="checkboxWrapper hasError"
      >
        <test-file-stub />
      </div>
      <input
        checked={false}
        className="inputWrapper"
        disabled={false}
        name="bar"
        onChange={[MockFunction]}
        type="checkbox"
        value="foo"
      />
    </Inline>
  </label>
</div>
`;
